# QoolTest

./: CMakeLists.txt  README.md
assets/: gui_main.ui  main.ui
src/: main.cpp  mainwindow.cpp  mainwindow.h  project.cpp  project.h
tests/: CMakeLists.txt  test.cpp
tests/testdata/: qooltest_project.qlpj  reset_proj.qlpj
